# PyVeritas

./: .readthedocs.yaml  CONTRIBUTING.md  DESCRIPTION.rst  README.md  RELEASE.md  conf.py  dev-requirements.txt  index.rst  pyproject.toml  requirements.txt
_build/doctrees/: environment.pickle
_build/doctrees/docs/: pyveritas.doctree
_build/html/: DESCRIPTION.html  index.html  search.html  searchindex.js
_build/html/docs/: modules.html  pyveritas.html
docs/: modules.rst  truth_statements.md
docs/doctrees/: DESCRIPTION.doctree  environment.pickle  index.doctree
docs/doctrees/docs/: modules.doctree
docs/html/: .buildinfo.bak  DESCRIPTION.html  genindex.html  index.html  objects.inv  search.html
docs/html/_sources/docs/: pyveritas.rst.txt
docs/html/docs/: modules.html  pyveritas.html
docs/source/: conf.py  index.rst  modules.rst
pyveritas/: __init__.py  base.py  contracts.py  fuzz.py  fuzzer.py  rules.py  runner.py  suite.py  unit.py  validator.py
pyveritas/examples/: test_end_date_after_start_date_rule.py
tests/: my_code.py  my_tests.py  test_contracts.py  test_suite.py  truth_statements.py
