[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "PyVeritas"
authors = [
    { name = "Tim McCallum", email = "mistermac2008@gmail.com" }
]
maintainers = [
    { name = "Tim McCallum", email = "mistermac2008@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.7"
version = "0.1.17"
description = "Data Validation Engine"
dependencies = ["typing-extensions"]

[project.urls]
Homepage = "https://github.com/tpmccallum/PyVeritas"
Documentation = "https://pyveritas.readthedocs.io"

[tool.flit.module]
name = "pyveritas"
